Update title tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="travis.pusher_key" value="5df8ac576dcccf4fd076">
     <meta name="travis.ga_code" value="UA-24868285-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travis CI - Free Hosted Continuous Integration Platform for the Open Source Community</title>
+    <title>Free Hosted Continuous Integration Platform for the Open Source Community - Travis CI</title>
     <link rel="dns-prefetch" href="//api.travis-ci.org">
     <link rel="dns-prefetch" href="//ws.pusherapp.com">
     <link rel="dns-prefetch" href="//api.github.com">
