--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="travis.ga_code" value="UA-24868285-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travis CI - Free Hosted Continuous Integration Platform for the Open Source Community</title>
+    <meta name="description" content="Free Hosted Continuous Integration (CI) Platofrm. Travis CI is trusted by the open source community to automatically test and deploy their code.">
     <link rel="dns-prefetch" href="//api.travis-ci.org">
     <link rel="dns-prefetch" href="//ws.pusherapp.com">
     <link rel="dns-prefetch" href="//api.github.com">
